progress on chap2

--- a/config.ini
+++ b/config.ini
@@ -14,8 +14,12 @@ release = 1.0.0-beta0
 # Jupyter notebooks.
 notebooks = *.md */*.md
 
+# A list of files, if anyone is modified after the last build, will re-build all
+# documents.
+dependences = config.ini
+
 # A list of files that will be copied to the build folder.
-resources = images/
+resources = images/ refs.bib
 
 # Files that will be skipped.
 exclusions = README.md
@@ -30,6 +34,10 @@ eval_notebook = True
 # (https://fontawesome.com/icons?d=gallery). Items are seperated by ,
 header_links = PDF, https://github.com/IVIA-AF/ivia-af.github.io/raw/main/Apprentissage-Automatisé.pdf, fas fa-file-pdf,
 GitHub, https://github.com/IVIA-AF/ivia-af.github.io, fab fa-github
+
+[pdf]
+
+bibfile = refs.bib
 
 [deploy]
 
